--- a/ansible/roles/common/tasks/update-system.yml
+++ b/ansible/roles/common/tasks/update-system.yml
@@ -6,3 +6,6 @@
 
 - name: update system - run world update
   shell: emerge -vtuDN --color=n --with-bdeps=y @world
+
+- name: update system - preserved rebuilds
+  shell: emerge -vt @preserved-rebuild
