set dns fallbacks

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -11,6 +11,7 @@
 - include: sysctl.yml
 - include: users-and-groups.yml
 - include: fix-dirs.yml
+- include: nsswitch.yml
 - include: update-system.yml
 #- include: java.yml
 
