vim settings, tabs to spaces

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,6 +7,8 @@ roles_path = ansible/roles
 interpreter_python = auto_silent
 #strategy = free
 
+#verbosity = 2
+
 [ssh_connection]
 # fully disable SSH host key checking, see: https://www.vagrantup.com/docs/provisioning/ansible_local.html
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
