--- a/provision.yml
+++ b/provision.yml
@@ -1,6 +1,6 @@
 ---
 # entry point for Vagrant provisioning
-# vim: syntax=yaml
+# vim: ts=2 sw=2 et syntax=yaml
 - hosts: all
   become: yes
   become_method: sudo
