--- a/ansible/roles/common/tasks/java.yml
+++ b/ansible/roles/common/tasks/java.yml
@@ -1,5 +1,5 @@
 ---
-# vim: syntax=yaml
+# vim: ts=2 sw=2 et syntax=yaml
 
 - name: java - set default system vm
   shell: eselect java-vm set system openjdk-bin-8
