--- a/ansible/roles/services/defaults/main.yml
+++ b/ansible/roles/services/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-# vim: syntax=yaml
+# vim: ts=2 sw=2 et syntax=yaml
 # !!!!!!!!!!!!!!!!!!!!!!!!
 # defaults, do not change!
 # !!!!!!!!!!!!!!!!!!!!!!!!
