--- a/ansible/roles/services/tasks/automysqlbackup.yml
+++ b/ansible/roles/services/tasks/automysqlbackup.yml
@@ -1,5 +1,5 @@
 ---
-# vim: syntax=yaml
+# vim: ts=2 sw=2 et syntax=yaml
 # installs the latest version of automysqlbackup
 
 - name: automysqlbackup - copy installer
