--- a/ansible/roles/services/tasks/couchdb.yml
+++ b/ansible/roles/services/tasks/couchdb.yml
@@ -1,5 +1,5 @@
 ---
-# vim: syntax=yaml
+# vim: ts=2 sw=2 et syntax=yaml
 # couchdb - see: http://docs.couchdb.org/en/stable/
 # LOG FILES: (couchdb:couchdb,644) couch.log
 
