--- a/ansible/roles/services/tasks/couchdb/import-export.yml
+++ b/ansible/roles/services/tasks/couchdb/import-export.yml
@@ -1,5 +1,5 @@
 ---
-# vim: syntax=yaml
+# vim: ts=2 sw=2 et syntax=yaml
 
 - name: couchdb - import export - install couchimport/couchexport global node module
   npm:
