--- a/ansible/roles/services/tasks/minica.yml
+++ b/ansible/roles/services/tasks/minica.yml
@@ -1,5 +1,5 @@
 ---
-# vim: syntax=yaml
+# vim: ts=2 sw=2 et syntax=yaml
 # minica - provides dynamic SSL keys and certificates
 
 - name: minica - ensure executable is installed
