--- a/ansible/roles/services/tasks/nginx.yml
+++ b/ansible/roles/services/tasks/nginx.yml
@@ -1,5 +1,5 @@
 ---
-# vim: syntax=yaml
+# vim: ts=2 sw=2 et syntax=yaml
 # TODO tweak ssl, see: https://haydenjames.io/nginx-tuning-tips-tls-ssl-https-ttfb-latency/
 # LOGS: todo (root:root,644) error_log  localhost.access_log  localhost.error_log
 
