--- a/ansible/roles/services/tasks/postfix.yml
+++ b/ansible/roles/services/tasks/postfix.yml
@@ -1,5 +1,5 @@
 ---
-# vim: syntax=yaml
+# vim: ts=2 sw=2 et syntax=yaml
 # TODO: setup postfix to deliver to mailcatcher
 # ensure compatibility_levl is uncommented
 # change: inet_interfaces = localhost ???
