--- a/ansible/roles/services/tasks/redis-commander.yml
+++ b/ansible/roles/services/tasks/redis-commander.yml
@@ -1,5 +1,5 @@
 ---
-# vim: syntax=yaml
+# vim: ts=2 sw=2 et syntax=yaml
 # redis-commander - see: https://github.com/joeferner/redis-commander
 # TODO add apache2 vhost config?
 
