--- a/ansible/roles/services/tasks/solr.yml
+++ b/ansible/roles/services/tasks/solr.yml
@@ -1,5 +1,5 @@
 ---
-# vim: syntax=yaml
+# vim: ts=2 sw=2 et syntax=yaml
 # solr - see: https://wiki.apache.org/solr
 
 # adjust some system limits for solr
@@ -11,10 +11,10 @@
     mode: 0644
     content: |
       # Allow more open file handles, because solr prints on the commandline:
-      # *** [WARN] *** Your open file limit is currently 16000.  
+      # *** [WARN] *** Your open file limit is currently 16000.
       # It should be set to 65000 to avoid operational disruption.
-      # *** [WARN] ***  Your Max Processes Limit is currently 7947. 
-      # It should be set to 65000 to avoid operational disruption. 
+      # *** [WARN] ***  Your Max Processes Limit is currently 7947.
+      # It should be set to 65000 to avoid operational disruption.
       #<domain>    <type>    <item>    <value>
       solr          soft      nofile    65000
       solr          hard      nofile    65000
