--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -1,10 +1,11 @@
 ---
 # entry point for Vagrant provisioning
 # vim: ts=2 sw=2 et syntax=yaml
+
 - hosts: all
   become: yes
   become_method: sudo
   user: vagrant
-  roles:
-    - common
-    - services
+  tasks:
+    - name: Include task list in play
+      include_tasks: tasks/main.yml
