--- a/ansible/roles/apache/defaults/main.yml
+++ b/ansible/roles/apache/defaults/main.yml
@@ -15,3 +15,4 @@ vhosts_path: "{{ host_root }}/vhosts"
 default_vhost_path: "{{ vhosts_path }}/default"
 default_htdocs_path: "{{ default_vhost_path }}/htdocs"
 default_errordocs_path: "{{ default_vhost_path }}/error"
+default_cgi_path: "{{ default_vhost_path }}/cgi-bin"
