--- a/ansible/environment/production/group_vars/all.yml
+++ b/ansible/environment/production/group_vars/all.yml
@@ -1,6 +1,9 @@
 ---
 # vim: ts=2 sw=2 et syntax=yaml
 
+# configure environment
+# advice to use .test domain (see RFC 6761 - https://www.rfc-editor.org/rfc/rfc6761.html)
+
 build_environment: production
-default_domainname: prod.test
+default_domainname: www.test
 php_version: 7.3
