--- a/ansible/roles/php/tasks/main.yml
+++ b/ansible/roles/php/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
 # vim: ts=2 sw=2 et syntax=yaml
 
+- include: dirs.yml
+- include: logs.yml
+- include: php_ini.yml
 - include: default_php.yml
