--- a/ansible/roles/apache/tasks/dirs.yml
+++ b/ansible/roles/apache/tasks/dirs.yml
@@ -1,7 +1,7 @@
 ---
 # vim: ts=2 sw=2 et syntax=yaml
 
-- name: ensure log dir exists
+- name: Ensure log dir exists
   file:
     path: /var/log/apache2
     state: directory
@@ -9,7 +9,7 @@
     group: '{{ apache_group }}'
     mode: 0750
 
-- name: set owner and group of '{{ host_root }}'
+- name: Set owner and group of '{{ host_root }}'
   file:
     path: '{{ host_root }}'
     state: directory
@@ -17,7 +17,7 @@
     group: '{{ apache_group }}'
     mode: 0750
 
-- name: created new default hosting dir
+- name: Create new default hosting dir
   file:
     path: '{{ item }}'
     state: directory
