--- a/ansible/tasks/common/main.yml
+++ b/ansible/tasks/common/main.yml
@@ -1,7 +1,9 @@
 ---
 # vim: ts=2 sw=2 et syntax=yaml
 
+- include: dirs.yml
 - include: sysctl.yml
 - include: limits.yml
 - include: nsswitch.yml
+- include: java.yml
 #- include: update.yml
