--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,9 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.sh]
+indent_size = 2
+
 [*.py]
 # pep-0008
 indent_style = space
