--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 packer_cache/
 /*.box
 .project
-/*.log
+/*.log*
 /keys
 vagrant-cloud-*
 !vagrant-cloud-token.sh
@@ -13,5 +13,5 @@ build_time
 version
 temp/
 packages/
-distfiles/
 /*.checksum
+distfiles/
