--- a/ansible/roles/php/tasks/main.yml
+++ b/ansible/roles/php/tasks/main.yml
@@ -3,5 +3,6 @@
 
 - include: dirs.yml
 - include: logs.yml
-- include: php_ini.yml
 - include: default_php.yml
+- include: php_ini.yml
+- include: php_fpm.yml
