--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ packer_cache/
 /keys
 vagrant-cloud-*
 !vagrant-cloud-token.sh
-output-virtualbox-ovf/
+output-*/
 build_number
 build_version
 build_time
