--- a/etc/build.conf
+++ b/etc/build.conf
@@ -1,34 +1,40 @@
-# customized user configuration (overrides defaults in config.sh)
+#!/bin/bash -uea
+# vim: ts=4 sw=4 et
+# customized user configuration
+# overrides defaults in bin/config.sh
+# run `make config` to see actual settings
 
-BUILD_BOX_NAME="webdev"
-BUILD_BOX_USERNAME="foobarlab"
-##BUILD_BOX_PROVIDER="virtualbox"
-BUILD_BOX_SOURCES="https://github.com/foobarlab/webdev-packer"
+BUILD__HELP="see file 'etc/build.conf' for overriding settings"
 
-BUILD_PARENT_BOX_USERNAME="foobarlab"
-BUILD_PARENT_BOX_NAME="funtoo-base"
-BUILD_PARENT_BOX_CLOUD_NAME="$BUILD_PARENT_BOX_USERNAME/$BUILD_PARENT_BOX_NAME"
-##BUILD_GUEST_TYPE="Gentoo_64"
+#BUILD_BOX_NAME="webdev"
+#BUILD_BOX_USERNAME="foobarlab"
+###BUILD_BOX_PROVIDER="virtualbox"
+#BUILD_BOX_SOURCES="https://github.com/foobarlab/webdev-packer"
 
-# default memory/cpus/disk used for final created box:
-BUILD_BOX_CPUS="4"
-BUILD_BOX_MEMORY="4096"
-BUILD_BOX_DISKSIZE="30720" # resize disk in MB, comment-in to keep exiting size
+#BUILD_PARENT_BOX_USERNAME="foobarlab"
+#BUILD_PARENT_BOX_NAME="funtoo-base"
+#BUILD_PARENT_BOX_CLOUD_NAME="$BUILD_PARENT_BOX_USERNAME/$BUILD_PARENT_BOX_NAME"
+###BUILD_GUEST_TYPE="Gentoo_64"
 
-# add a custom overlay?
-#BUILD_CUSTOM_OVERLAY=false
-#BUILD_CUSTOM_OVERLAY_NAME="myreponame"
-#BUILD_CUSTOM_OVERLAY_URL="https://github.com/username/myreponame-overlay.git"
-#BUILD_CUSTOM_OVERLAY_BRANCH="main"
+## default memory/cpus/disk used for final created box:
+#BUILD_BOX_CPUS="4"
+#BUILD_BOX_MEMORY="4096"
+#BUILD_BOX_DISKSIZE="30720"   # resize disk in MB, comment-in to keep exiting size
 
-# TODO make finalize step optional, like:
-#BUILD_AUTO_FINALIZE=false  # if 'true' automatically run finalize.sh script
+## add a custom overlay?
+##BUILD_CUSTOM_OVERLAY=false
+##BUILD_CUSTOM_OVERLAY_NAME="myreponame"
+##BUILD_CUSTOM_OVERLAY_URL="https://github.com/username/myreponame-overlay.git"
+##BUILD_CUSTOM_OVERLAY_BRANCH="main"
 
-BUILD_KERNEL=false                 # build a new kernel?
-BUILD_HEADLESS=true                # if true, gui will be uninstalled, otherwise gui will be shown
+## TODO make finalize step optional, like:
+##BUILD_AUTO_FINALIZE=false         # if 'true' automatically run finalize.sh script
 
-# TODO flag for xorg (BUILD_WINDOW_SYSTEM)?
+#BUILD_KERNEL=false                 # build a new kernel?
+#BUILD_HEADLESS=true                # if true, gui will be uninstalled, otherwise gui will be shown
 
-BUILD_MYSQL_ROOT_PASSWORD="changeme"  # set the root password for MySQL/MariaDB
-BUILD_ENVIRONMENT="development"       # set box purpose to 'development' or 'production'
-BUILD_KEEP_MAX_CLOUD_BOXES=1          # set the maximum number of boxes to keep in Vagrant Cloud
+## TODO flag for xorg (BUILD_WINDOW_SYSTEM)?
+
+#BUILD_MYSQL_ROOT_PASSWORD="changeme"  # set the root password for MySQL/MariaDB
+##BUILD_ENVIRONMENT="development"      # set box purpose to 'development' or 'production'
+BUILD_KEEP_MAX_CLOUD_BOXES=1           # set the maximum number of boxes to keep in Vagrant Cloud
