--- a/etc/build.conf
+++ b/etc/build.conf
@@ -4,7 +4,7 @@
 # overrides defaults in bin/config.sh
 # run `make config` to see actual settings
 
-BUILD__HELP="see file 'etc/build.conf' for overriding settings"
+BUILD__HELP="see file 'etc/build.conf' for custom settings"
 
 #BUILD_BOX_NAME="webdev"
 #BUILD_BOX_USERNAME="foobarlab"
@@ -37,4 +37,4 @@ BUILD__HELP="see file 'etc/build.conf' for overriding settings"
 
 #BUILD_MYSQL_ROOT_PASSWORD="changeme"  # set the root password for MySQL/MariaDB
 ##BUILD_ENVIRONMENT="development"      # set box purpose to 'development' or 'production'
-BUILD_KEEP_MAX_CLOUD_BOXES=1           # set the maximum number of boxes to keep in Vagrant Cloud
+#BUILD_KEEP_MAX_CLOUD_BOXES=1           # set the maximum number of boxes to keep in Vagrant Cloud
